--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "@types/yup": "^0.28.0",
     "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
     "react": "^16.12.0",
@@ -20,8 +19,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
     "styled-components": "^5.1.0",
-    "typescript": "~3.7.2",
-    "yup": "^0.28.4"
+    "typescript": "~3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
