--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-autosuggest": "^9.3.13",
     "@types/react-dom": "^16.9.0",
     "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
+    "react-autosuggest": "^10.0.2",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.12.0",
     "react-google-login": "^5.1.10",
