--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-autosuggest": "^9.3.13",
     "@types/react-dom": "^16.9.0",
+    "@types/react-select": "^3.0.13",
     "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
     "js-cookie": "^2.2.1",
@@ -23,6 +24,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
+    "react-select": "^3.1.0",
     "styled-components": "^5.1.0",
     "typescript": "~3.7.2"
   },
