--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-select": "^3.0.13",
     "@types/react-transition-group": "^4.4.0",
+    "@types/styled-components": "^5.1.0",
     "bootstrap": "^4.4.1",
     "formik": "^2.1.4",
     "js-cookie": "^2.2.1",
