--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/escape-string-regexp": "^2.0.1",
     "@types/jest": "^24.0.0",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^12.0.0",
@@ -16,6 +17,7 @@
     "@types/react-transition-group": "^4.4.0",
     "@types/styled-components": "^5.1.0",
     "bootstrap": "^4.4.1",
+    "escape-string-regexp": "^4.0.0",
     "formik": "^2.1.4",
     "js-cookie": "^2.2.1",
     "react": "^16.12.0",
